--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -1,1 +1,72 @@
 /* header */
+
+.header {
+	width: 100%;
+	height: 640px;
+	background-color: #F59231;
+}
+
+.header-container {
+	position: relative;
+	width: 1280px;
+	height: 100%;
+	margin: 0 auto;
+}
+
+.header-qpic {
+	position: absolute;
+	top: 36px;
+	left: 48px;
+	img {
+		height: 48px;
+	}
+}
+
+.header-logo {
+	position: absolute;
+	top: 103px;
+	left: 110px;
+	img {
+		height: 320px;
+	}
+}
+
+.header-detail {
+	position: absolute;
+	bottom: 37px;
+	left: 128px;
+	background: rgba(0,0,0,.2);
+	color: white;
+	ul {
+		margin-bottom: 24px;
+	}
+	li {
+		font-size: 1.2em;
+		line-height: 1.4em;
+	}
+}
+
+.header-message {
+	font-size: 2em;
+	font-weight: bold;
+}
+
+.header-info {
+	position: absolute;
+	bottom: 36px;
+	right: 128px;
+	width: 240px;
+}
+
+.header-banner {
+	img {
+		width: 240px;
+		height: 80px;
+		box-shadow: 0 2px 4px rgba(0,0,0,.2);
+		border-radius: 2px;
+		margin-bottom: 16px;
+	}
+	&:last-child img {
+		margin-bottom: 0;
+	}
+}
