フォントと色

--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -35,7 +35,7 @@
 	position: absolute;
 	bottom: 37px;
 	left: 128px;
-	background: rgba(0,0,0,.2);
+	text-shadow: 0 0 12px rgba($black, .9);
 	color: white;
 	ul {
 		margin-bottom: 24px;
