--- a/src/scss/layout/_navigation.scss
+++ b/src/scss/layout/_navigation.scss
@@ -1,19 +1,74 @@
 .navigation {
 	width: 100%;
-	height: 120px;
+	height: 80px;
 	background-color: $eclair-yellow-dark;
 
 	ul {
 		display: flex;
-		align-items: center;
-		justify-content: center;
+		align-items: stretch;
+		justify-content: space-between;
+		height: 100%;
 		li {
+			position: relative;
 			font-size: 2em;
 			text-shadow: 0 1px 2px rgba($black, .2);
+			text-align: center;
+			&:after {//border
+				content: "";
+				display: block;
+				margin: 8px 0;
+				width: 1px;
+				height: calc(100% - 16px);
+				background-color: white;
+				position: absolute;
+				right: 0;
+				top: 0;
+			}
+			&:last-child:after {
+				width: 0;
+			}
+
 			a {
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				flex-wrap: wrap;
+				width: 100%;
+				height: 100%;
 				color: $white;
 				text-decoration: none;
+				font-weight: bold;
+				transition: 0.1s;
+				&:hover {
+					background-color: $eclair-orange;
+				}
+			}
+			span {
+				display: inline-block;
 			}
 		}
 	}
+}
+
+.nav-top {
+	width: 80px;
+	img {
+		height: 64px;
+	}
+}
+
+.nav-about {
+	flex: 3;
+}
+
+.nav-character {
+	flex: 3;
+}
+
+.nav-gallery {
+	flex: 2;
+}
+
+.nav-roadmap {
+	flex: 2;
 }
