--- a/src/scss/layout/_navigation.scss
+++ b/src/scss/layout/_navigation.scss
@@ -3,6 +3,10 @@
 	height: 80px;
 	background-color: $eclair-yellow-dark;
 
+	> .container-wide {
+		height: 100%;
+	}
+
 	ul {
 		display: flex;
 		align-items: stretch;
@@ -11,7 +15,7 @@
 		li {
 			position: relative;
 			font-size: 2em;
-			text-shadow: 0 1px 2px rgba($black, .2);
+			text-shadow: 0 1px 2px rgba($black, .3);
 			text-align: center;
 			&:after {//border
 				content: "";
