--- a/src/scss/layout/_navigation.scss
+++ b/src/scss/layout/_navigation.scss
@@ -1,7 +1,14 @@
+.navigation-wrapper {
+	position: relative;
+}
+
 .navigation {
+	position: sticky;
+	top:0;
 	width: 100%;
 	height: 80px;
 	background-color: $eclair-yellow-dark;
+	box-shadow: 0px 3px 6px rgba($black, .2);
 
 	> .container-wide {
 		height: 100%;
