スクロール位置によってnavigationの見た目が変わるやつ

--- a/src/scss/layout/_navigation.scss
+++ b/src/scss/layout/_navigation.scss
@@ -39,6 +39,10 @@
 				width: 0;
 			}
 
+			&.active a {
+				background-color: $eclair-orange-light;
+			}
+
 			a {
 				display: flex;
 				align-items: center;
