動画差し替え

--- a/src/scss/layout/_movie.scss
+++ b/src/scss/layout/_movie.scss
@@ -4,7 +4,7 @@
 	overflow: hidden;
 	iframe {
 		width: 100vw;
-		height: calc(100vw * 9 / 16);
+		height: calc(100vw / 4);
 		//transform: translateY(-50%);
 	}
 }
