--- a/src/scss/layout/_movie.scss
+++ b/src/scss/layout/_movie.scss
@@ -1,10 +1,40 @@
 .movie {
+	position: relative;
 	width: 100%;
 	height: 320px;
 	overflow: hidden;
 	iframe {
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%,-50%);
 		width: 100vw;
 		height: calc(100vw / 4);
-		//transform: translateY(-50%);
+		@include mq(pc-narrow){
+			width: 1280px;
+			height: 320px;
+		}
+		@include mq(tl){
+			display: none;
+		}
+		@include mq(sp){
+			display: none;
+		}
 	}
+
+	a {
+		display: block;
+		position: relative;
+		width: 100%;
+		height: 100%;
+		background: url("images/common/stripe-black.png");
+		background-size: 177px 151px;
+	}
+}
+
+.movie-play {
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%,-50%);
 }
