--- a/src/scss/layout/_movie.scss
+++ b/src/scss/layout/_movie.scss
@@ -27,8 +27,15 @@
 		position: relative;
 		width: 100%;
 		height: 100%;
-		background: url("images/common/stripe-black.png");
-		background-size: 177px 151px;
+		background: rgba($black, .3);
+		//background-size: 177px 151px;
+		transition: .2s;
+	}
+	a:hover {
+		background: rgba($black, 0);
+		.movie-play {
+			transform: translate(-50%,-50%) scale(1.2);
+		}
 	}
 }
 
@@ -37,4 +44,5 @@
 	left: 50%;
 	top: 50%;
 	transform: translate(-50%,-50%);
+	transition: .2s ease-out;
 }
