--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -65,8 +65,14 @@
 		box-shadow: 0 2px 4px rgba(0,0,0,.2);
 		border-radius: 2px;
 		margin-bottom: 16px;
+		transition: .1s;
 	}
 	&:last-child img {
 		margin-bottom: 0;
+	}
+	&:hover img {
+		opacity: .8;
+		transform: translateY(-1px);
+		box-shadow: 0 3px 6px rgba($black, .2);
 	}
 }
