--- a/src/scss/layout/_gallery.scss
+++ b/src/scss/layout/_gallery.scss
@@ -2,9 +2,21 @@
 	margin: 48px 0;
 
 	h2 {
+		padding: 48px 0;
 		text-align: center;
 		font-size: 1.8em;
 		color: $white;
 		text-shadow: 0 2px 4px rgba($black, .2);
+	}
+
+	> .container {
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: space-around;
+		box-shadow: 0 2px 4px rgba($black, .2);
+	}
+
+	a {
+
 	}
 }
