--- a/src/scss/layout/_about.scss
+++ b/src/scss/layout/_about.scss
@@ -1,6 +1,8 @@
 .about {
 	background: url("images/common/stripe.png");
 	background-size: 177px 151px;
+	box-shadow: 0 2px 4px rgba($black, .2);
+	
 	> .container {
 		margin: 0 auto ;
 		padding: 48px 0 72px;
