--- a/src/scss/layout/_character.scss
+++ b/src/scss/layout/_character.scss
@@ -1,4 +1,5 @@
 .characters {
+	margin-top: 16px;
 	background: url("images/common/stripe.png");
 	background-size: 177px 151px;
 	box-shadow: 0 2px 4px rgba($black, .2);
