--- a/src/scss/layout/_character.scss
+++ b/src/scss/layout/_character.scss
@@ -3,6 +3,7 @@
 	background: url("images/common/stripe.png");
 	background-size: 177px 151px;
 	box-shadow: 0 2px 4px rgba($black, .2);
+	//overflow-x: hidden;
 
 	> .container {
 		margin: 0 auto ;
