--- a/src/scss/object/_frame.scss
+++ b/src/scss/object/_frame.scss
@@ -1,5 +1,10 @@
 .frame {
 	border-style: solid;
-	border-width: 64px 64px 64px 64px;
+	border-width: 64px;
 	border-image: url("images/common/frame.png") 128 128 128 128 fill repeat;
+}
+@include mq(sp){
+	.frame {
+		border-width: 48px;
+	}
 }
