--- a/src/scss/layout/_about.scss
+++ b/src/scss/layout/_about.scss
@@ -16,6 +16,10 @@
 		font-size: 1.4em;
 		line-height: 1.6em;
 		text-shadow: 0 1px 2px rgba(0,0,0,.1);
+
+		span {
+			display: inline-block;
+		}
 	}
 	.emphasized {
 		font-size: 120%;
@@ -47,13 +51,26 @@
 	box-shadow: 0 3px 6px rgba($black,.3);
 }
 
+@include mq(pc-narrow){
+	.about h3 {
+		margin-left: 0px;
+	}
+	.about-movie {
+		margin-top: 48px;
+	}
+}
+
 @include mq(sp){
 	.about {
-		overflow-x: visible;
+		overflow-x: visible;//hiddenだとstickyしなくなるクソバグ早く治せ
 	}
 
 	.about-movie {
-		float: none;
 		display: none;
+		float: none;
+		transform: rotate(0);
+	}
+
+	#about-player {
 	}
 }
