--- a/src/scss/layout/_about.scss
+++ b/src/scss/layout/_about.scss
@@ -12,6 +12,7 @@
 	}
 
 	p {
+		position: relative;
 		margin: 24px 0;
 		font-size: 1.4em;
 		line-height: 1.6em;
@@ -59,10 +60,37 @@
 		margin-top: 48px;
 	}
 }
+@include mq(tl){
+	.about {
+		p {
+			text-shadow: 0 0 3px rgba($white,1);
+		}
+		h3 {
+			margin-left: 0px;
+			margin-bottom: 24px;
+		}
+	}
 
+	.about-movie {
+		float: none;
+		margin: 16px auto;
+		transform: rotate(0);
+	}
+}
 @include mq(sp){
 	.about {
 		overflow-x: visible;//hiddenだとstickyしなくなるクソバグ早く治せ
+		p {
+			font-size: 1.2em;
+		}
+		h3 {
+			margin-left: 0px;
+			font-size: 1.6em;
+		}
+	}
+
+	.about-eclair {
+		display: none;
 	}
 
 	.about-movie {
