--- a/src/scss/layout/_character.scss
+++ b/src/scss/layout/_character.scss
@@ -28,6 +28,9 @@
 		margin-top: 48px;
 		margin-left: -20px;
 		text-shadow: 0 3px 6px rgba(0,0,0,.2);
+		span {
+			display: inline-block;
+		}
 	}
 
 	.and-so-on {
@@ -38,7 +41,7 @@
 		font-weight: bold;
 		p {	
 			display: inline-block;
-			transform: translateX(5%);
+			transform: translateX(2%);
 			text-shadow: 0 3px 6px rgba($black, .2);
 		}
 	}
@@ -59,6 +62,13 @@
 		}
 	}
 }
+@include mq(tl){
+	.characters {
+		h3 {
+			margin-left: 0;
+		}
+	}
+}
 @include mq(sp){
 	.characters {
 		margin-top: 0;
@@ -66,5 +76,11 @@
 		h3 {
 			margin-left: 0;
 		}
+	}
+	.characters-image {
+		float: none;
+		display: block;
+		margin: 24px auto;
+		height: 320px;
 	}
 }
