水玉背景と再生ボタン

--- a/src/scss/foundation/_base.scss
+++ b/src/scss/foundation/_base.scss
@@ -8,10 +8,9 @@ h1,h2,h3,h4 {
 }
 
 body {
-	background-color: $eclair-orange;
-	background-image: url("images/bg/1.jpg");
-	background-repeat: no-repeat;
+	background: url("images/common/polkadot.png"), url("images/bg/1.jpg"), $eclair-orange;
+	background-repeat: repeat, no-repeat;
 	background-attachment: fixed;
-	background-size: cover;
+	background-size: 48px 48px, cover;
 	background-position: center center;
 }
