--- a/src/scss/layout/_about.scss
+++ b/src/scss/layout/_about.scss
@@ -99,6 +99,12 @@
 		transform: rotate(0);
 	}
 
+	.about-gif {
+		width: calc(100%);
+		margin: 16px 0;
+		box-shadow: 0 1px 2px rgba($black, .2);
+	}
+
 	#about-player {
 	}
 }
