--- a/src/scss/layout/_movie.scss
+++ b/src/scss/layout/_movie.scss
@@ -3,6 +3,8 @@
 	width: 100%;
 	height: 320px;
 	overflow: hidden;
+	background-image: url("images/movie/thumbnail.jpg");
+	background-size: cover;
 	iframe {
 		position: absolute;
 		top: 50%;
