--- a/src/scss/layout/_about.scss
+++ b/src/scss/layout/_about.scss
@@ -17,7 +17,7 @@
 		font-size: 1.4em;
 		line-height: 1.6em;
 		text-shadow: 0 1px 2px rgba(0,0,0,.1);
-
+		max-width: 600px;
 		span {
 			display: inline-block;
 		}
@@ -33,6 +33,9 @@
 		margin-top: 96px;
 		margin-left: -20px;
 		text-shadow: 0 3px 6px rgba(0,0,0,.2);
+		span {
+			display: inline-block;
+		}
 	}
 }
 
@@ -101,6 +104,7 @@
 
 	.about-gif {
 		width: calc(100%);
+		height: auto;
 		margin: 16px 0;
 		box-shadow: 0 1px 2px rgba($black, .2);
 	}
