--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,6 +1,7 @@
 .footer {
 	width: 100%;
 	margin-top: 160px + 80px;
+	margin-bottom: -32px;
 	color: $white;
 	background-color: #232627;
 	text-align: center;
