--- a/src/shadowbox/shadowbox.css
+++ b/src/shadowbox/shadowbox.css
@@ -18,9 +18,9 @@
 #sb-info-inner{font-size:12px;}
 #sb-nav{float:right;height:16px;padding:2px 0;width:45%;}
 #sb-nav a{display:block;float:right;height:16px;width:16px;margin-left:3px;cursor:pointer;background-repeat:no-repeat;}
-#sb-nav-close{background-image:url(close.png);}
-#sb-nav-next{background-image:url(next.png);}
-#sb-nav-previous{background-image:url(previous.png);}
+#sb-nav-close{background-image:url(close.png);background-size:cover;}
+#sb-nav-next{background-image:url(next.png);background-size:cover;}
+#sb-nav-previous{background-image:url(previous.png);background-size:cover;}
 #sb-nav-play{background-image:url(play.png);}
 #sb-nav-pause{background-image:url(pause.png);}
 #sb-counter{float:left;width:45%;}
