--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -16,6 +16,13 @@
 	}
 }
 
+.footer-social {
+	margin-top: 48px;
+	iframe {
+		margin: 8px;
+	}
+}
+
 @include mq(sp){
 	.footer img {
 		width: calc(100% - 48px);
