--- a/src/scss/layout/_about.scss
+++ b/src/scss/layout/_about.scss
@@ -29,6 +29,7 @@
 	}
 
 	h3 {
+		position: relative;
 		font-size: 2em;
 		margin-top: 96px;
 		margin-left: -20px;
@@ -47,6 +48,7 @@
 }
 
 .about-movie {
+	position: relative;
 	float:right;
 	margin-right: -56px;
 	height: 360px;
