ミニゲームバナー&中身一応完成

--- a/src/scss/layout/_minigames.scss
+++ b/src/scss/layout/_minigames.scss
@@ -2,30 +2,63 @@
 	display: none;
 }
 
-.minigames {
+.minigames-container {
 	background: url("images/common/stripe.png");
 	background-size: 177px 151px;
 	width: 100%;
 	height: 100%;
-	padding: 16px;
-	overflow: scroll;
+}
 
-	h2 {
-		margin: 16px 0;
+.minigames {
+
+	h3 {
+		padding: 32px 0 16px;
 		text-align: center;
 		font-size: 2em;
 		text-shadow: 0 2px 4px rgba($black, .2);
 	}
 
 	p {
-		margin: 16px 0;
+		margin: 16px 16px;
 	}
 }
 
+.minigames-inner {
+	margin: 32px auto;
+}
+
 .minigame {
-	width: calc(100% - 32px);
+	width: calc(100% - 64px);
+	margin: 0 auto;
+	padding: 16px;
 	border-radius: 2px;
 	border: solid 1px #EEE;
 	background-color: white;
 	box-shadow: 0 2px 4px rgba($black, .2);
+}
+
+.minigame-logo {
+}
+
+.minigame-inner {
+	display: flex;
+	align-items: center;
+	margin: 8px 0;
+
+	.description {
+		flex: 1;
+		align-self: flex-start;
+	}
+}
+
+.minigame-screenshot {
+}
+
+.minigame-download.button {
+	background-color: $eclair-orange;
+	margin: 16px auto 0;
+
+	&:hover {
+		color: $eclair-orange;
+	}
 }
