--- a/src/scss/layout/_navigation.scss
+++ b/src/scss/layout/_navigation.scss
@@ -31,7 +31,7 @@
 				margin: 8px 0;
 				width: 1px;
 				height: calc(100% - 16px);
-				background-color: white;
+				background-color: rgba($white, .5);
 				position: absolute;
 				right: 0;
 				top: 0;
