--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -5,6 +5,7 @@
 .header {
 	width: 100%;
 	height: 640px;
+	overflow: hidden;
 }
 
 .header-container {
@@ -54,18 +55,24 @@
 
 .header-logo {
 	position: absolute;
-	top: 103px;
+	top: 144px;
 	left: 110px;
 	img {
-		height: 320px;
+		height: 280px;
 	}
+}
+
+.header-hero {
+	position: absolute;
+	right: 0;
+	transform: translateX(10%);
 }
 
 .header-detail {
 	position: absolute;
 	bottom: 36px;
 	left: 128px;
-	text-shadow: 0 0 12px rgba($black, .6);
+	text-shadow: 0 0 10px rgba($black, 1);
 	color: white;
 	ul {
 		margin-bottom: 24px;
@@ -74,6 +81,15 @@
 		font-size: 1.2em;
 		line-height: 1.4em;
 	}
+}
+
+.header-glitch {
+	width: 640px;
+	height: 320px;
+	position: absolute;
+	left: -24px;
+	bottom: -48px;	
+	background-image: url("images/header/glitch.png");
 }
 
 .header-message {
@@ -91,6 +107,7 @@
 .header-banner {
 	display: block;
 	margin-bottom: 16px;
+	box-shadow: 0 2px 4px rgba($black, .2);
 
 	> img {
 		width: 240px;
@@ -110,11 +127,18 @@
 }
 
 .header-twitter-header {
-
+	background-color: #2796DD;
 	color: white;
+	border-radius: 4px 4px 0 0;
+	margin-bottom: -4px;
+	padding-bottom: 4px;
 	display: flex;
 	align-items: center;
 	font-size: 0.8em;
+
+	> img {
+		margin-left: 4px;
+	}
 
 	.twitter-name {
 		flex: 1;
@@ -128,6 +152,7 @@
 	.twitter-follow {
 		color: white;
 		display: inline-block;
+		margin-right: 5px;
 		padding: 6px 12px;
 		text-decoration: none;
 		border: 1px solid $white;
@@ -149,11 +174,16 @@
 	align-items: flex-end;
 	height: 48px;
 	justify-content: space-between;
+	filter: url(#drop-shadow);
+  	-webkit-filter: drop-shadow(0px 0px 4px rgba(0, 0, 0, 0.8));
 }
 
 @include mq(pc-narrow){
 	.header-logo {
 		left: 30px;
+	}
+	.header-hero {
+		transform: translateX(20%);
 	}
 	.header-detail {
 		left: 48px;
@@ -176,10 +206,23 @@
 	}
 	.header-logo {
 		position: static;
+		transform: translateX(2%);
 		img {
 			height: auto;
 			width: calc(100% - 48px);
-			max-width: 600px;
+			max-width: 640px;
+		}
+	}
+	.header-hero {
+		position: static;
+		margin: 48px 0 -144px;
+		width: 100%;
+		transform: translateX(0);
+		overflow: hidden;
+
+		img {
+			width: 120%;
+			height: auto;
 		}
 	}
 	.header-detail {
@@ -227,6 +270,17 @@
 			max-width: 600px;
 		}
 	}
+	.header-hero {
+		position: static;
+		width: 100%;
+		margin: 48px 0 -96px;
+
+		img {
+			width: 160%;
+			transform: translateX(-16%);
+			height: auto;
+		}
+	}
 	.header-detail {
 		position: static;
 		margin: 32px auto;
@@ -241,7 +295,7 @@
 	}
 	.header-info {
 		position: static;
-		width: calc(100% - 32px);
+		//width: calc(100% - 32px);
 		margin: 48px auto 16px;
 	}
 	.header-share {
