--- a/src/scss/variable/_color.scss
+++ b/src/scss/variable/_color.scss
@@ -4,7 +4,7 @@ $black: #000;
 $white: #FFF;
 
 $eclair-orange-light: #FFA26C;
-$eclair-orange: #FF8929;
+$eclair-orange: #f27937;
 $eclair-cyan: #65EDED;
 $eclair-cyan-dark: #28B2B2;
 $eclair-yellow: #FFE859;
