--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -262,6 +262,8 @@
 		position: static;
 		flex-direction: row;
 		justify-content: center;
+		filter: url(#drop-shadow);
+  		-webkit-filter: drop-shadow(0px 0px 4px rgba(0, 0, 0, 0.2));
 		iframe {
 			margin: 0 16px;
 		}
@@ -319,6 +321,8 @@
 		position: static;
 		flex-direction: row;
 		justify-content: center;
+		filter: url(#drop-shadow);
+  		-webkit-filter: drop-shadow(0px 0px 4px rgba(0, 0, 0, 0.2));
 		iframe {
 			margin: 0 16px;
 		}
