--- a/src/scss/layout/_roadmap.scss
+++ b/src/scss/layout/_roadmap.scss
@@ -17,7 +17,8 @@
 	}
 
 	li {
-		line-height: 2em;
+		margin: 8px 0;
+		line-height: 1.8em;
 		font-size: 1.4em;
 		font-weight: bold;
 		text-align: center;
