--- a/src/scss/layout/_banner.scss
+++ b/src/scss/layout/_banner.scss
@@ -1,21 +1,17 @@
 .banner {
-	display: none;
-	position: fixed;
-	bottom: 24px;
-	right: 24px;
-	background-color: $eclair-orange;
+	position: relative;
+	background: url("images/banner/background.png");
+	//background-color: $eclair-cyan-dark;
 
 	a {
 		display: block;
 		width: calc(100% - 32px);
 		max-width: 560px;
 		margin: 0 auto;
-		padding: 16px 0 0;
+		padding: 8px 0;
 	}
 
 	img {
-		width: 100%;
-		height: auto;
 		filter: url(#drop-shadow);
   		-webkit-filter: drop-shadow(0px 2px 4px rgba(0, 0, 0, 0.25));
 	}
@@ -34,7 +30,11 @@
 		position: relative;
 		width: 100%;
 		a {
-			padding: 8px 0 16px;
+			padding: 8px 0 8px;
+		}
+		img {
+			width: 100%;
+			height: auto;
 		}
 	}
 }
