--- a/src/scss/layout/_download.scss
+++ b/src/scss/layout/_download.scss
@@ -55,7 +55,7 @@
 .download-button {
 	display: block;
 	border-radius: 2px;
-	margin: 24px;
+	margin: 48px;
 	padding: 24px 0;
 	box-shadow: 0 1px 2px rgba($black,.3);
 	background-color: $eclair-orange;
@@ -74,5 +74,16 @@
 		margin-bottom: 8px;
 		font-weight: bold;
 		font-size: 1.2em;
+	}
+}
+
+.download-minigame-button {
+	display: block;
+	margin: 24px 0;
+	text-align: center;
+
+	img {
+				filter: url(#drop-shadow);
+  		-webkit-filter: drop-shadow(0px 2px 4px rgba(0, 0, 0, 0.25));
 	}
 }
