--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -49,6 +49,8 @@
 	position: absolute;
 	top: 36px;
 	left: 48px;
+			filter: url(#drop-shadow);
+	-webkit-filter: drop-shadow(0px 2px 4px rgba(0, 0, 0, 0.25));
 	img {
 		height: 48px;
 	}
