--- a/src/scss/layout/_download.scss
+++ b/src/scss/layout/_download.scss
@@ -31,6 +31,10 @@
 	p {
 		margin: 16px 0;
 		text-align: center;
+
+		> span {
+			display: inline-block;
+		}
 	}
 }
 
@@ -40,7 +44,8 @@
 }
 
 .download-pane {
-	padding: 16px;
+	padding: 24px 8px;
+	min-width: 240px;
 
 	&.is-main {
 		flex: 2;
@@ -85,5 +90,20 @@
 	img {
 				filter: url(#drop-shadow);
   		-webkit-filter: drop-shadow(0px 2px 4px rgba(0, 0, 0, 0.25));
+	}
+}
+
+@include mq(sp){
+	.download-pane {
+		width: 100%;
+		min-width: none;
+		&.is-main {
+			border-right: none;
+			border-bottom: 1px solid $white;
+		}
+	}
+
+	.download-button {
+		margin: 48px 8px;
 	}
 }
