--- a/src/scss/layout/_download.scss
+++ b/src/scss/layout/_download.scss
@@ -62,16 +62,22 @@
 	border-radius: 2px;
 	margin: 48px;
 	padding: 24px 0;
-	box-shadow: 0 1px 2px rgba($black,.3);
-	background-color: $eclair-orange;
+	background: url("images/download/download-button-bg.jpg");
+	background-position: center;
+	background-size: cover;
+	box-shadow: 0 0 0 2px rgba($white,.5) inset;
+	text-shadow: 0 2px 8px rgba($black,1);
 	color: $white;
 	text-align: center;
-	transition: 0.1s;
+	transition: all 0.1s;
 	text-decoration: none;
+	transform: scale(1);
+			filter: url(#drop-shadow);
+	-webkit-filter: drop-shadow(0px 2px 4px rgba(0, 0, 0, 0.25));
 
-	&:hover {
-		background-color: $white;
-		color: $eclair-orange;
+	&:hover {	
+		box-shadow: 0 0 0 6px rgba($white,.5) inset;
+		transform: scale(1.03);
 	}
 
 	span {
