--- a/src/scss/layout/_movie.scss
+++ b/src/scss/layout/_movie.scss
@@ -1,27 +1,11 @@
 .movie {
 	position: relative;
 	width: 100%;
-	height: 360px;
-	overflow: hidden;
-	background-image: url("images/movie/thumbnail.jpg");
-	background-size: cover;
+	text-align: center;
+	background-color: rgba($white,.5);
 	iframe {
-		position: absolute;
-		top: 50%;
-		left: 50%;
-		transform: translate(-50%,-50%);
-		width: 100vw;
-		height: calc(100vw / 4);
-		@include mq(pc-narrow){
-			width: 1440px;
-			height: 360px;
-		}
-		@include mq(tl){
-			display: none;
-		}
-		@include mq(sp){
-			display: none;
-		}
+		margin: 64px auto;
+		box-shadow: 0 2px 4px rgba($black,.2);
 	}
 
 	a {
