--- a/src/scss/layout/_download.scss
+++ b/src/scss/layout/_download.scss
@@ -1,15 +1,16 @@
 .download {
 	width: 100%;
 	max-width: 960px;
-	margin: 96px auto;
+	margin: 360px auto;
 	color: $white;
 
 	h2 {
 		width: 100%;
 		margin: 36px 0;
-		font-size: 1.8em;
+		font-size: 2.4em;
 		text-align: center;
 		font-weight: bold;
+		line-height: 1.6em;
 		text-shadow: 0 2px 4px rgba($black, .2);
 	}
 
