--- a/src/scss/variable/_color.scss
+++ b/src/scss/variable/_color.scss
@@ -3,8 +3,8 @@
 $black: #000;
 $white: #FFF;
 
-$eclair-orange-light: #FFA26C;
-$eclair-orange: #f27937;
+$eclair-orange-light: #f77674;
+$eclair-orange: #FC514E;
 $eclair-cyan: #65EDED;
 $eclair-cyan-dark: #28B2B2;
 $eclair-yellow: #FFE859;
