--- a/src/scss/layout/_download.scss
+++ b/src/scss/layout/_download.scss
@@ -1,7 +1,7 @@
 .download {
 	width: 100%;
 	max-width: 960px;
-	margin: 360px auto;
+	margin: 360px auto 420px;
 	color: $white;
 
 	h2 {
@@ -11,7 +11,11 @@
 		text-align: center;
 		font-weight: bold;
 		line-height: 1.6em;
-		text-shadow: 0 2px 4px rgba($black, .2);
+		text-shadow: 0 3px 6px rgba($black, .4);
+
+		span {
+			display: inline-block;
+		}
 	}
 
 	h3 {
@@ -32,10 +36,19 @@
 	p {
 		margin: 16px 0;
 		text-align: center;
+		font-size: 1.6em;
+		line-height: 1.8em;
+		text-shadow: 0 2px 4px rgba($black, .3);
 
 		> span {
 			display: inline-block;
 		}
+	}
+
+	.emphasized {
+		font-size: 120%;
+		font-weight: bold;
+		text-shadow: 0 3px 6px rgba(0,0,0,.2);
 	}
 }
 
@@ -61,9 +74,12 @@
 .download-button {
 	display: block;
 	border-radius: 2px;
-	margin: 48px;
-	padding: 24px 0;
-	background: url("images/download/download-button-bg.jpg");
+	margin: 48px auto;
+	width: 600px;
+	max-width: calc(100% - 16px);
+	height: 300px;
+	padding: 0;
+	background: url("images/download/eclair-button.png");
 	background-position: center;
 	background-size: cover;
 	box-shadow: 0 0 0 2px rgba($white,.5) inset;
@@ -101,6 +117,16 @@
 }
 
 @include mq(sp){
+
+	.download {
+		h2 {
+			font-size: 1.8em;
+		}
+		p {
+			font-size: 1.2em;
+		}
+	}
+
 	.download-pane {
 		width: 100%;
 		min-width: none;
@@ -112,5 +138,6 @@
 
 	.download-button {
 		margin: 48px 8px;
+		height: 160px;
 	}
 }
