--- a/src/scss/layout/_movie.scss
+++ b/src/scss/layout/_movie.scss
@@ -4,6 +4,7 @@
 	text-align: center;
 	background-color: rgba($white,.5);
 	iframe {
+		max-width: 100%;
 		margin: 64px auto;
 		box-shadow: 0 2px 4px rgba($black,.2);
 	}
