動画を更新

--- a/src/scss/layout/_download.scss
+++ b/src/scss/layout/_download.scss
@@ -17,6 +17,7 @@
 		width: 100%;
 		text-align: center;
 		font-size: 1.2em;
+		line-height: 1.6em;
 	}
 
 	ul {
@@ -26,6 +27,7 @@
 	li {
 		margin-left: 16px;
 		list-style-type: circle;
+		line-height: 1.4em;
 	}
 	
 	p {
